--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
     <script src="./scripts/script.js"></script>
-    <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/globals.css">
-    <link rel="stylesheet" href="./styles/dark.css">
-    <link rel="stylesheet" href="./styles/light.css">
-    <link rel="icon" href="/images/mobile-icon.png">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="icon" href="/images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header decorated-zone content-section">
@@ -46,7 +46,8 @@
       <div class="header__check" aria-hidden="true"></div>
       <h1 class="header__title">no focus</h1>
       <h2 class="header__subtitle title-decor">
-        Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        Что делать, когда не можешь делать ничего<br />Или почему нам так сложно
+        сконцентрироваться, особенно когда очень надо
       </h2>
     </header>
     <main class="content content-section">
@@ -56,13 +57,33 @@
           <li class="section-list-item">
             <article class="card">
               <h2 class="card__title title-decor">Многозадачность</h2>
-              <p class="card__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="card__link">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+              <p class="card__text">
+                Особенно сложно сосредоточиться, когда задач много и все они —
+                важные. Где же легендарная многозадачность, когда она так нужна
+                вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+                её просто не существует. Исследователи
+                <a class="card__link">выяснили</a>, что мозгу тяжело
+                концентрироваться даже на двух делах одновременно. А когда в
+                поле внимания попадает несколько важных задач, организм паникует
+                и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
+                мы работаем невнимательно: ошибаемся и быстро устаём.
+              </p>
             </article>
           </li>
           <li class="section-list-item">
             <article class="card">
               <h2 class="card__title title-decor">Дофамин</h2>
-              <p class="card__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+              <p class="card__text">
+                С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+                нашей невозможности сосредоточиться замешана и полная
+                противоположность стрессу — дофамин. Это вещество участвует в
+                системе вознаграждения мозга. Причём тут он? Мы часто
+                отвлекаемся от важной задачи на что-то более «приятное» для
+                мозгов. Например, смотрим лайки в соцсетях. В это время и
+                выделяется дофамин — и мы чувствуем удовольствие. Получается
+                замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+                получаешь.
+              </p>
             </article>
           </li>
         </ul>
@@ -73,55 +94,116 @@
           <li class="section-list-item">
             <article class="card">
               <h2 class="card__title title-decor">Многозадачность</h2>
-              <p class="card__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+              <p class="card__text">
+                Как концентрация может снижаться из-за… концентрации? Любая
+                стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+                наш мозг постоянно «сканировать» окружающую среду на предмет
+                опасности. Например, читать новости вместо работы. Но быть
+                собранными всё время — невозможно. Концентрация — мышца, и она
+                может не выдержать, если не давать ей отдохнуть.
+              </p>
             </article>
           </li>
           <li class="concentration-list-item">
             <article class="card">
               <h2 class="card__title title-decor">Еда</h2>
-              <p class="card__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+              <p class="card__text">
+                «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+                доставляют в мозг энергию и помогают ему лучше работать. Но
+                уходит эта энергия также быстро, как и приходит. А мы в
+                результате попадаем на «углеводные качели»: как только действие
+                «быстрых углеводов» заканчивается, мы чувствуем усталость и
+                сонливость. И хотим ещё больше быстрых углеводов.
+              </p>
             </article>
           </li>
           <li class="concentration-list-item">
             <article class="card">
               <h2 class="card__title title-decor">Гаджеты</h2>
-              <p class="card__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+              <p class="card__text">
+                Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+                наушниках — подкаст, а на компьютере фоном — ещё и видео с
+                забавными утятами. В результате мозг пытается переключиться с
+                одной задачи на другую — и просто не может. А чтобы вернуться к
+                состоянию полной концентрации, человеку в среднем нужно 20
+                минут. Вот и получается, что чем больше времени мы проводим в
+                гаджетах, тем больше времени затем нужно, чтобы вернуться к
+                работе.
+              </p>
             </article>
           </li>
         </ul>
       </section>
       <section class="section section__advice">
-        <h2 class="section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <h2 class="section__title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
         <ul class="section-list">
-          <h3 class="section__title title-decor">5 простых (на самом деле не очень) советов</h3>
           <li class="section-list-item">
+            <h2 class="section__title title-decor">
+              5 простых (на самом деле не очень) советов
+            </h2>
             <article class="card">
               <p class="card__text title-decor">Представьте небо и облака</p>
-              <p class="card__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+              <p class="card__text">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
+              </p>
             </article>
           </li>
           <li class="section-list-item">
             <article class="card">
               <p class="card__text title-decor">Включите музыку</p>
-              <p class="card__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
+              <p class="card__text">
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист с «белым шумом» или нейромузыкой.
+              </p>
             </article>
           </li>
           <li class="section-list-item">
             <article class="card">
               <p class="card__text title-decor">Прогуляйтесь</p>
-              <p class="card__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+              <p class="card__text">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                показал, что созерцание природы повышает концентрацию, в то
+                время как после просмотра городских пейзажей она наоборот
+                понижается. Можно совместить прогулку с физическими упражнениями
+                или бегом — так в мозг поступит ещё больше кислорода и он будет
+                лучше работать. Но и простая двадцатиминутная прогулка — тоже
+                отличный вариант.
+              </p>
             </article>
           </li>
           <li class="section-list-item">
             <article class="card">
               <p class="card__text title-decor">Хорошо ешьте</p>
-              <p class="card__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+              <p class="card__text">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
+              </p>
             </article>
           </li>
           <li class="section-list-item">
             <article class="card">
               <p class="card__text title-decor">Читайте</p>
-              <p class="card__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+              <p class="card__text">
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
             </article>
           </li>
         </ul>
@@ -130,43 +212,43 @@
         <h2 class="section__title title-decor">А можно в картинках?</h2>
         <ul class="section-list">
           <li class="section-list-item">
-            <img 
-            class="gallery__image"
-            src="../images/sunset.png"
-            alt="Рассвет над водоемом с летающими птицами"
-            loading="lazy"
+            <img
+              class="gallery__image"
+              src="../images/sunset.png"
+              alt="Рассвет над водоемом с летающими птицами"
+              loading="lazy"
             />
           </li>
           <li class="section-list-item">
-            <img 
-            class="gallery__image"
-            src="../images/ice-cream.png"
-            alt="4 рожка мороженного в тарелке с нарисованными лицами"
-            loading="lazy"
+            <img
+              class="gallery__image"
+              src="../images/ice-cream.png"
+              alt="4 рожка мороженного в тарелке с нарисованными лицами"
+              loading="lazy"
             />
           </li>
           <li class="section-list-item">
-            <img 
-            class="gallery__image"
-            src="../images/tape.png"
-            alt="Кассета"
-            loading="lazy"
+            <img
+              class="gallery__image"
+              src="../images/tape.png"
+              alt="Кассета"
+              loading="lazy"
             />
           </li>
           <li class="section-list-item">
-            <img 
-            class="gallery__image"
-            src="../images/books.png"
-            alt="Книжки, сложенные друг на друга, сверху на них стоит чашка"
-            loading="lazy"
+            <img
+              class="gallery__image"
+              src="../images/books.png"
+              alt="Книжки, сложенные друг на друга, сверху на них стоит чашка"
+              loading="lazy"
             />
           </li>
           <li class="section-list-item">
-            <img 
-            class="gallery__image"
-            src="../images/street.png"
-            alt="Улица с несколькими домами вдоль дороги"
-            loading="lazy"
+            <img
+              class="gallery__image"
+              src="../images/street.png"
+              alt="Улица с несколькими домами вдоль дороги"
+              loading="lazy"
             />
           </li>
         </ul>
