--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 важные. Где же легендарная многозадачность, когда она так нужна
                 вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
                 её просто не существует. Исследователи
-                <a class="card__link" target="_blank">выяснили</a>, что мозгу
-                тяжело концентрироваться даже на двух делах одновременно. А
-                когда в поле внимания попадает несколько важных задач, организм
-                паникует и выделяет кортизол и адреналин — «гормоны стресса».
-                Из-за этого мы работаем невнимательно: ошибаемся и быстро
-                устаём.
+                <a class="card__link" target="_blank" href="#0">выяснили</a>,
+                что мозгу тяжело концентрироваться даже на двух делах
+                одновременно. А когда в поле внимания попадает несколько важных
+                задач, организм паникует и выделяет кортизол и адреналин —
+                «гормоны стресса». Из-за этого мы работаем невнимательно:
+                ошибаемся и быстро устаём.
               </p>
             </article>
           </li>
